--- a/REEU_AMR.ipynb
+++ b/REEU_AMR.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np \n",
     "\n",
     "#file upload \n",
-    "Data_file = '/Users/jhasneha/Downloads/AcinetobacterNIH.tsv'\n",
+    "Data_file = AcinetobacterNIH.tsv\n",
     "Acine_data= pd.read_csv(Data_file, sep='\\t')\n",
     "\n"
    ]
