--- a/REEU_AMR.ipynb
+++ b/REEU_AMR.ipynb
@@ -7,10 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd \n",
     "import numpy as np \n",
     "\n",
     "#file upload \n",
-    "Data_file = AcinetobacterNIH.tsv\n",
+    "Data_file = 'AcinetobacterNIH.tsv'\n",
     "Acine_data= pd.read_csv(Data_file, sep='\\t')\n",
     "\n"
    ]
@@ -76,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
